hphp/test/slow/exceptions/assign-this-in-catch.php.expectf
Fatal error: You cannot use this syntax where a `catch` variable is expected. in %s/assign-this-in-catch.php on line 7
